--- a/public/views/operario.html
+++ b/public/views/operario.html
@@ -15,15 +15,15 @@
     
     <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
     
-    <link rel="stylesheet" href="styles/styles.css">
-    <link rel="stylesheet" href="styles/estiloOpe.css">
+    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="../styles/estiloOpe.css">
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>-->
-    <script type="text/javascript" src="scripts/operario.js"></script>
+    <script type="text/javascript" src="../scripts/operario.js"></script>
 
 </head>
 
