--- a/public/views/paciente.html
+++ b/public/views/paciente.html
@@ -15,8 +15,8 @@
     
     <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
     
-    <link rel="stylesheet" href="styles/styles.css">
-    <link rel="stylesheet" href="styles/estiloPac.css">
+    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="../styles/estiloPac.css">
     
     
     <style>
@@ -34,7 +34,7 @@
     <!-- Latest compiled and minified JavaScript -->
     <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>-->
     
-    <script type="text/javascript" src="scripts/script.js"></script>
+    <script type="text/javascript" src="../scripts/script.js"></script>
     
    
 
