--- a/public/views/pac-examenes.html
+++ b/public/views/pac-examenes.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <title>Centros M&eacute;dicos</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="UTF-8">
+	<title>Mis Ex&aacute;menes</title>
 
-
-    <!-- Latest compiled and minified CSS -->
+	<!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
     <!-- Optional theme -->
@@ -17,7 +14,6 @@
     
     <link rel="stylesheet" href="../styles/styles.css">
     <link rel="stylesheet" href="../styles/estiloPac.css">
-    
     
     <style>
         body{
@@ -29,19 +25,9 @@
         }
     </style>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <!-- Latest compiled and minified JavaScript -->
-    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>-->
-    
-    <script type="text/javascript" src="../scripts/script.js"></script>
-    
-   
-
 </head>
-
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+	<nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -64,28 +50,39 @@
             <!--/.nav-collapse -->
         </div>
     </nav>
-    
-    <section id="contenido">
-        
-        <h2 class="container-fluid">Cargar Contenido</h2>
 
-        <div id="centros-medicos" class="articulo container">
-            <h3>Centros M&eacute;dicos</h3>
-            <hr>
+    <div id="examenes" class="articulo container">
+		<h3>Mis Ex&aacute;menes</h3>
+        <hr>
+        <div class="container resultados">
+        	<table class="table table-bordered">
+                    <tr class="text-center">
+                        <th>C&oacute;digo</th>
+                        <th>Fecha</th>
+                        <th>Tipo de Examen</th>
+                        <th>Estado</th>
+                    </tr>
+                    <tr text-center>
+                        <td>sample a1</td>
+                        <td>sample b1</td>
+                        <td>sample c1</td>
+                        <td>sample d1</td>
+                    </tr>
+                    <tr text-center>
+                        <td>sample a1</td>
+                        <td>sample b1</td>
+                        <td>sample c1</td>
+                        <td>sample d1</td>
+                    </tr>
+                    <tr text-center>
+                        <td>sample a1</td>
+                        <td>sample b1</td>
+                        <td>sample c1</td>
+                        <td>sample d1</td>
+                    </tr>
+            </table>
         </div>
-
-            
-    </section>
-    
-
-    
-
-    <footer class="footer">
-        <div class="container">
-            <p class="copyright text-muted small">Copyright &copy; 2016. Todos los derechos reservados</p>
-        </div>
-    </footer>
-
+	</div>
+	
 </body>
-
 </html>
